examples/positive/L1/if_statement.ob
MODULE IfStatement;

VAR b: BOOLEAN;
    x: INTEGER;

BEGIN
  IF b 
  THEN
    x := 4
  END
END IfStatement.
