examples/negative/name_errors/L1/3_var_same_scope_pp.ob
MODULE VarSameScope;
  VAR x, x : INTEGER;
BEGIN
  
END VarSameScope.
